--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ecom_drog
-spring.datasource.username=root
-spring.datasource.password=Mysql579@
+spring.datasource.url=jdbc:mysql://${DB-HOST}:${DB-PORT}/${DB-NAME}
+spring.datasource.username=${DB-USER}
+spring.datasource.password=${DB-PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA Configuration
