--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
-
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${DB-HOST}:${DB-PORT}/${DB-NAME}
-spring.datasource.username=${DB-USER}
-spring.datasource.password=${DB-PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom_drog
+spring.datasource.username=root
+spring.datasource.password=Mysql579@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-#ffff
-#ff
+spring.jpa.show-sql=true*/
